--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "leancloud-storage": "^3.14.1",
-    "valine": "^1.3.9"
+    "valine": "^1.3.9",
+    "vuepress": "^1.0.3"
   }
 }
